--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Portuguese language -- Orthography and spelling'
 - !lcsh 'Portuguese language -- Orthography and spelling -- Handbooks, manuals, etc.'
 - !lcc 'PC'
+- GITenberg
 title: Cartilha Maternal; ou, Arte de Leitura
 url: http://www.gutenberg.org/ebooks/46334
